# rpg

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  macos-install.md  production-hardening.md  production-plan.md  release-packaging.md  remediation-plan.md  runtime-contracts.md  updater-rollback-policy.md
scripts/: audit-test-contracts.mjs  clean.mjs  create-release-provenance.mjs  desktop-build.mjs  desktop-installed-smoke-macos.sh  desktop-installed-smoke.ps1  desktop-installer-lifecycle.ps1  desktop-smoke.ps1  (+14 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: archive_runtime_database.toml  backup_runtime_database.toml  cancel_text_generation.toml  discover_local_text_providers.toml  download_chub_character.toml  generate_text_with_stored_secret.toml  initialize_runtime_repository.toml  load_runtime_snapshot.toml  persist_generated_image.toml  save_runtime_snapshot.toml  secure_storage_status.toml  store_provider_secret.toml  sync_generated_image_files.toml
src-tauri/src/: lib.rs  main.rs  runtime_repository.rs
src-tauri/src/runtime_repository/: schema.rs  storage.rs  tests.rs  validation.rs
src-tauri/tests/fixtures/: schema-v1-0996b8d.sql
(+319 files in other folders)
