[package]
name = "local-first-ai-rpg-runtime"
version = "0.1.0"
description = "Local-first AI character and RPG runtime"
authors = ["Dwthe"]
edition = "2021"

[lib]
name = "local_first_ai_rpg_runtime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "4.1.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tokio = { version = "1", features = ["macros", "sync"] }
